# SolarScan

./: .gitignore  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
assets/: make_sample.py
configs/: default.yaml  sample_farm.yaml  zenodo_uav.yaml
data/: README.md  download.py
docker/: Dockerfile.serve  docker-compose.yml
docs/: JETSON.md
eval/: MODEL_CARD.md
src/solarscan/: __init__.py  cli.py  config.py  schemas.py  taxonomy.py
src/solarscan/data/: __init__.py  infrared_modules.py  transforms.py
src/solarscan/edge/: __init__.py  benchmark.py  onnx_export.py  trt_build.py
src/solarscan/evaluation/: __init__.py  metrics.py
src/solarscan/geo/: __init__.py  farm.py  georef.py  visualize.py
src/solarscan/models/: __init__.py  base.py  stub.py  timm_classifier.py  yolo_detector.py
src/solarscan/pipeline/: __init__.py  run.py
src/solarscan/report/: __init__.py  pdf.py  yield_loss.py
src/solarscan/serve/: __init__.py  api.py  render.py
src/solarscan/serve/static/: index.html
src/solarscan/training/: __init__.py  train_classifier.py  train_detector.py
tests/: test_data_split.py  test_edge.py  test_geo.py  test_metrics.py  test_pipeline.py  test_serve.py  test_taxonomy.py
webui/: README.md
