[project]
name = "solarscan"
version = "0.1.0"
description = "Aerial PV fault detection: drone thermal/RGB imagery -> detect, classify & georeference solar-panel faults -> severity-ranked yield-loss inspection report, with a real-time edge path on NVIDIA Jetson."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Elnur Shahbalayev" }]
keywords = ["computer-vision", "solar", "pv", "thermal", "fault-detection", "jetson", "tensorrt", "energy"]

# Core deps are intentionally light so the Phase-0 end-to-end slice (and CI)
# run anywhere without a GPU. Heavy stacks live in optional extras below.
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "pillow>=10.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "reportlab>=4.0",
    "rich>=13.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=1.0",
    "ultralytics>=8.2",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "scikit-learn>=1.4",
]
serve = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]
geo = [
    "opencv-python>=4.9",
    "rasterio>=1.3",
    "pyproj>=3.6",
    "folium>=0.16",
]
# Installed only on the Jetson devices (Orin Nano / Orin NX), where tensorrt
# and pycuda ship with JetPack. Do not install on dev/CI machines.
edge = [
    "onnxruntime-gpu>=1.18",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
solarscan = "solarscan.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solarscan"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Typer / FastAPI use callables in argument defaults by design.
"src/solarscan/cli.py" = ["B008"]
"src/solarscan/serve/api.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
packages = ["solarscan"]
ignore_missing_imports = true
